samples/_failures_safe/1761606957_fb90ae_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_61baa872.c: In function ‘main’:
./samples/SAFE/__tmp_61baa872.c:144:5: error: expected declaration or statement at end of input
  144 |     printf("3. Matrix Transpose (A)\n");
      |     ^~~~~~
